fixed button sizing on dashboard and fixed up weird spacing issue that was occuring in user attributes at top of dashboard

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -219,12 +219,16 @@ body {
 
 .team-info-text {
     order: 2;
-    padding: 10px 30px 0 30px;
+    padding: 0 30px 0 30px;
 }
 
 .team-info-text h1 {
     font-size: 3rem;
     text-transform: uppercase;
+}
+
+.team-info * {
+    margin: 0;
 }
 
 /* BUTTONS */
